@@ -31,6 +31,7 @@
   *  - Altered the SCSI commands in the LowLevel Mass Storage Host to save on FLASH space by reducing function calls
   *  - Changed the parameters and behaviour of the USB_GetDeviceConfigDescriptor() function so that it now performs size checks
   *    and data validations internally, to simplify user code
+  *  - Changed HIDParser to only zero out important values in the Parsed HID Report Item Information structure to save cycles
   *
   *  <b>Fixed:</b>
   *  - Fixed possible lockup in the CDC device class driver, when the host sends data that is a multiple of the
